--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/rahulsups/habit-tracker#readme",
   "dependencies": {
     "connect-flash": "^0.1.1",
+    "cookie-session": "^2.0.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
